Fixed contrast issue

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ html {
 .page {
     --text-color: #333;
     --primary-color: #214154;
-    --accent-color: #ef6d39;
+    --accent-color: #d1470f;
     --bg-color: #f7f7f7;
 
     --default-border-radius: 10px;
